--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.11.0
@@ -5,10 +8,13 @@ attrs==25.4.0
 blinker==1.9.0
 cachetools==6.2.1
 certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
+cryptography==46.0.3
+dashscope==1.25.1
 distro==1.9.0
-exceptiongroup==1.3.0
+frozenlist==1.8.0
 gitdb==4.0.12
 GitPython==3.1.45
 h11==0.16.0
@@ -21,14 +27,17 @@ json5==0.12.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 MarkupSafe==3.0.3
+multidict==6.7.0
 narwhals==2.11.0
-numpy==2.2.6
-openai==2.8.1
+numpy==2.3.4
+openai==2.7.2
 packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
+propcache==0.4.1
 protobuf==6.33.0
 pyarrow==21.0.0
+pycparser==2.23
 pydantic==2.12.4
 pydantic_core==2.41.5
 pydeck==0.9.1
@@ -49,4 +58,5 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
-watchdog==6.0.0
+websocket-client==1.9.0
+yarl==1.22.0
